--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "build": "microbundle --jsx=React.createElement --raw",
-    "test:publish": "e2e-verdaccio"
+    "test:publish": "e2e-verdaccio",
+    "prepublish": "pnpm run build"
   },
   "repository": {
     "type": "git",
