--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {},
   "volta": {
     "node": "14.15.4",
-    "npm": "7.4.3"
+    "npm": "7.4.3",
+    "yarn": "1.22.10"
   }
 }
