--- a/spring/package.json
+++ b/spring/package.json
@@ -44,16 +44,16 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.1.0",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-delete": "^2.0.0",
     "@types/babel__core": "^7.1.12",
     "@types/node": "^14.14.21",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-spring": "^8.0.27",
     "rollup": "^2.36.1",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-delete": "^2.0.0",
     "typescript": "^4.2.0-beta"
   },
   "peerDependencies": {
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "@reach/auto-id": "^0.12.1",
-    "@reach/dialog": ">=0.12"
+    "@reach/dialog": ">=0.12",
+    "react-focus-lock": "^2.5.0"
   }
 }
