SSR example with Next.js

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@ yarn-error.log*
 .yarn/install-state.gz
 .pnp.*
 
+# vercel
+.vercel
+
+# next.js
+.next/
+out/
+
+
 # TypeScript
 *.tsbuildinfo
 
