Fixed publishing issues
Fixed carbon.sh screenshot path issues.
Updated CodeSandbox link.
Visualizer for bundle.
Externalize all dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ yarn-error.log*
 .next/
 out/
 
-
 # TypeScript
 *.tsbuildinfo
 
@@ -33,6 +32,11 @@ out/
 dist
 build
 spring/styles.css
+framer/styles.css
+
+# rollup-plugin-visualizer
+spring/stats
+framer/stats
 
 # Testing
 coverage
