--- a/examples/typescript/package.json
+++ b/examples/typescript/package.json
@@ -9,9 +9,7 @@
     "cra-template-typescript": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.1",
-    "react-spring": "^8.0.27",
-    "react-spring-modal": "1.0.8"
+    "react-scripts": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
